# mock-decorator

./: .gitignore  LICENSE  README.md  code-coverage.json  mutation-testing-report.json  mypy.ini  pyproject.toml  requirements.txt  tools.ipynb
.github/workflows/: poodle-mutation-test.yml  python-platform-test.yml  python-publish.yml  python-test-scan.yml  update-coverage.yml
src/mock_decorator/: __init__.py
tests/: test_args_class.py  test_args_func.py  test_args_func_multiple.py  test_args_no_args.py  test_args_no_args_class.py  test_plain_class.py  test_plain_func.py  test_plain_simple.py  test_plain_simple_class.py  test_simple_class.py  test_simple_dec.py  test_simple_fwa.py
tests/example/: args_class.py  args_dec.py  args_func.py  args_func_multiple.py  args_no_args.py  plain_class.py  plain_dec.py  plain_func.py  plain_simple.py  simple_class.py  simple_dec.py  simple_func.py  simple_fwa.py
